After a bit of a struggle on the Thrust learning curve,...finally got it to generate and print random cufftComplex values! (Yay.). Basically, don't assume thrust::device_vector and thrust::host_vectors are like std::vector. There's no thrust::host_vector::at(index), for example. I have to use [index]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,7 @@ find_package(CUDA QUIET REQUIRED)
 
 # Selects GPU arch flags for nvcc based on target_CUDA_architectures
 # Xavier is compute capability 7.2, Tegra X2 is 6.1
-#cuda_select_nvcc_arch_flags(ARCH_FLAGS 7.2)
-cuda_select_nvcc_arch_flags(ARCH_FLAGS 6.1)
+cuda_select_nvcc_arch_flags(ARCH_FLAGS 3.0 7.2 6.1)
 
 list(APPEND CUDA_NVCC_FLAGS ${ARCH_FLAGS})
 list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v")
